--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 text-center search">
     <%= form_tag search_offers_path, method: :get do |f| %>
-    <%= text_field_tag :search, nil, placeholder: "Band    Your location    Date", class: "col-md-9" %>
+    <%= text_field_tag :search, nil, placeholder: "", class: "col-md-9" %>
     <%= submit_tag "Search", class: "col-md-3 btn btn-warning" %>
     <% end %>
   </div>
