--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container index">
+  
 <%= form_for @contact do |f| %>
     <% if flash[:error].present? %>
         <p> flash[:error]</p>
@@ -20,3 +22,4 @@
 
     <%= f.submit 'Send Message', class: "button" %>
   <% end %>
+</div>
