--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -228,3 +228,8 @@ html, body { background: #F5F5F5; }
 .proposal-form{
   margin-left: 10%;
 }
+.contact-form{
+  .nickname{
+  display: none;
+  }
+}
