--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -44,7 +44,7 @@
     <div class="row mid">
         <div class="col-sm-4">
           
-          
+          <%= link_to "Leave us a message", new_contact_path, class: "btn btn-default navbar-btn" %>
 
         </div>
         <div class="col-sm-4"></div>
