--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container index">
+<div class="container contact-form">
   
 <%= form_for @contact do |f| %>
     <% if flash[:error].present? %>
@@ -15,11 +15,11 @@
     <%= f.label :message %> <br>
     <%= f.text_area :message, as: :text %>
 
- 
+    <div class=nickname>
     <%= f.label :nickname %> <br>
     <%= f.text_field :nickname, hint: 'leave this field blank' %>
-
-
+    </div>
+    <br/>
     <%= f.submit 'Send Message', class: "button" %>
   <% end %>
 </div>
