--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,25 +1,29 @@
 <div class="container contact-form">
-  
+  <h3> Write us a message </h3>
+  <br/>
 <%= form_for @contact do |f| %>
     <% if flash[:error].present? %>
         <p> flash[:error]</p>
     <% end %>
+     <div class="form-group">
     <%= f.label :name %> <br>
-    <%= f.text_field :name, required: true %>
-
+    <%= f.text_field :name, required: true, class: "form-control input-lg" %>
+</div>
     <br>
+     <div class="form-group">
     <%= f.label :email %> <br>
-    <%= f.text_field :email, required: true %>
-
+    <%= f.text_field :email, required: true, class: "form-control input-lg" %>
+</div>
     <br>
+     <div class="form-group">
     <%= f.label :message %> <br>
-    <%= f.text_area :message, as: :text %>
-
+    <%= f.text_area :message, as: :text, class: "form-control input-lg" %>
+</div>
     <div class=nickname>
     <%= f.label :nickname %> <br>
-    <%= f.text_field :nickname, hint: 'leave this field blank' %>
+    <%= f.text_field :nickname %>
     </div>
     <br/>
-    <%= f.submit 'Send Message', class: "button" %>
+    <%= f.submit 'Send Message', class: "btn btn-warning" %>
   <% end %>
 </div>
