--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -42,14 +42,24 @@
   </div>
     
     <div class="row mid">
+      <div class="contact">
         <div class="col-sm-4">
           
-          <%= link_to "Leave us a message", new_contact_path, class: "btn btn-default navbar-btn" %>
-
-        </div>
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4"></div>
+          <p class="about">Have a question? </p>
+           </div>
+        
+        <div class="col-sm-4"> 
+          <div class="box"><P>If you want to ask us something, or have a suggestion, or just want to say hi, get in touch. </P>
+          </div>
+           </div>
+       
+        <div class="col-sm-4"> 
+          <div class="leave">
+          <%= link_to "Leave us a message", new_contact_path, class: "btn btn-warning navbar-btn" %>
+            </div>
+          </div>
     </div>
+  </div>
     <div class="row lower">
         <div class="col-sm-12"></div>
     </div>
