--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -15,7 +15,7 @@
       <div class="form-group">
         <%= f.label :concert, "Concert:", class: "blue" %>
         <%= f.text_field :concert, class: "form-control input-lg" %>
-        <small class="help-block">Concert which you are going to</small>
+        <small class="help-block">Ex: Metallica London 21.07.2018</small>
       </div>
     </div>
     <div class="col-xs-12 col-md-6">
@@ -53,7 +53,7 @@
       <div class="form-group">
         <%= f.label :location, "Location:", class: "blue" %>
         <%= f.text_field :location, class: "form-control input-lg" %>
-        <small class="help-block">Where do you start </small>
+        <small class="help-block">Starting location </small>
       </div>
     </div>
   </div>
