--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -26,18 +26,21 @@
     <div class="offer-list">
       <h3>Featured Offers <span class="small pull-right">1 - 25 results</span></h3>
       <br>
+
       <div class="offer-description clearfix">
         <% @offers.each do |offer| %>
         <div class="offer clearfix">
           <div class="col-xs-8">
+
             <p class="blue">
-              <%= link_to offer.concert, offer %>
-              
-            <p><%= offer.price %></p>
+
+              <%= link_to offer.concert, offer %> 
+            </p>  
+            <p>Price: <%= offer.price %> | Proposals: <%= offer.proposals.count %>  </p>
           </div>
           <div class="col-xs-4 text-right">
-            <p><%= offer.created_at.strftime("%d %m, %Y") %></p>
-            <p><%= offer.location %></p>
+            
+            <p> <%=offer.location %></p>
           </div>
         </div>
         <% end %>
